# instant-scurves

./: .gitignore  README.md  env.sh  pyproject.toml
legacy/: scurve_analysis.py  scurve_scan.py
scurve/: __init__.py  daq.py  run.py
scurve/static/: script.js  style.css
scurve/templates/: base.html  index.html  scurve.html
