[tool.poetry]
name = "instant-scurves"
version = "0.1.0"
description = ""
authors = ["Antonello Pellecchia <antonello.pellecchia@cern.ch>"]

[tool.poetry.dependencies]
python = "~3.8"
Flask = "^2.1.2"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
mplhep = "^0.3.25"
PyYAML = "^6.0"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
